--- a/views/admin/players/playersInsert.ejs
+++ b/views/admin/players/playersInsert.ejs
@@ -36,7 +36,7 @@
     <style>
         #insertionForm{
             display: inline-block;
-            max-width: 20%;
+            /* max-width: 20%; */
             overflow: auto;
             padding: 10px;
         }
@@ -81,12 +81,12 @@
                 success: (data) =>{
                     console.log(data)
                     console.log("Suggestions Fetched: insertingAfter")
-                    if($('#suggestionBlock').length == 0){
-                        $(data).insertAfter('#insertionForm')
-                    }
-                    else{
-                        $('#suggestionBlock').replaceWith(data)
-                    }
+                    // if($('#suggestionBlock').length == 0){
+                    //     $(data).insertAfter('#insertionForm')
+                    // }
+                    // else{
+                        $('#insertionSuggestion_fkBlock').html(data)
+                    // }
                 },
                 error: (err) =>{
                     console.log(err)
@@ -98,6 +98,7 @@
 
             const strt1 = $('#role option').eq(0).val()
             const strt2 = $('#batting_style').eq(0).val()
+            // const strt2 = "Amit Vikram Singh"
             const strt3 = $('#bowling_style').eq(0).val()
 
             var player_nameObs = Rx.Observable.fromEvent($('#player_name'),'keyup')
@@ -120,11 +121,11 @@
                                             return [a, b, c, d, e]
                                         })
                                         .skip(1)
-            combinedObs.subscribe(
+            combinedObs.subscribe(  
                 ([a, b, c, d, e]) => {
                     // if(typeof a !== 'string' || typeof b !== 'string' || typeof c !== 'string'|| typeof d !== 'string'
                     //     || typeof e !== 'string') console.log("Not String")
-                    console.log(a, b, c, d, e)
+                    console.log("Emission: ", a, b, c, d, e)
                     postRequest(a, b, c, d, e)
                 },
                 (err) => {
