gui for insertion form

--- a/views/admin/authority/authorityInsert.ejs
+++ b/views/admin/authority/authorityInsert.ejs
@@ -9,6 +9,8 @@
     <style>
         #insertionForm{
             display: inline-block;
+            overflow: auto;
+            padding: 10px;
         }
     
         input[type=text]{
