--- a/views/admin/rightPan.ejs
+++ b/views/admin/rightPan.ejs
@@ -43,14 +43,15 @@
             <div id = "insertionHeader">
                 <h4>Insertion</h4>
             </div>
-            <div id = "insertionContent;">
+            <div id = "insertionContent">
                 <div id = "insertionFormBlock">
                     <!-- Insertion Form block -->
                     <%-insertionForm%>
-                </div>
-                <div id = "insertionSuggestion_fkBlock">
+                </div><!--
+                --><div id = "insertionSuggestion_fkBlock">
                     Suggestions/ForeignKey
                 </div>
+                <div style = "clear: both"></div>
             </div>
         </div><div id = "queryBlock">
             <div id = "queryHeader">
@@ -66,8 +67,8 @@
             </div>
         </div>
     </div>
-    <div style = "height: 100px; border-top: 1px solid black; text-align: center;
-                line-height: 100%; min-width: 100%">
-        Cricket Database Project
-    </div>
+    <!-- <div style = "height: 100px; border-top: 1px solid black; text-align: center;
+                line-height: 100%; min-width: 100%; overflow: auto">
+        <p>Cricket Database Project <br> IIT Palakkad</p>
+    </div> -->
 </div>
