--- a/views/admin/countries/countriesInsert.ejs
+++ b/views/admin/countries/countriesInsert.ejs
@@ -9,6 +9,7 @@
     <style>
         #insertionForm{
             display: inline-block;
+            padding: 10px;
         }
     
         input[type=text]{
