--- a/public/rightPan.css
+++ b/public/rightPan.css
@@ -2,30 +2,34 @@
     padding:0;
     margin:0;
     padding-top: 70px;
-    width: 100%;
-    height: 100%;
-    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    max-height: 100%;
+    /* width: 100%; */
+    /* flex-wrap: nowrap; */
     overflow: auto;
+    /* overflow-x: hidden; */
 }
 
 #schema{
-    display: inline-block;
-    vertical-align: top;
     border-bottom: 1px solid black;
     padding: 6px;
+    flex: 0 0 250px;
 }
 
 #insertion_queryBlock{
-    /* overflow: auto; */
-    display: inline-block;
-    /* min-width: 100%; */
-    min-height: 100%;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
+    /* min-height: 100%; */
+    flex: 1 0 auto;
+    /* border-right: 1px solid black; */
+    /* border-left: 1px solid black; */
+    display: flex;
+    flex-direction: column;
 }
 
 #insertionBlock{ 
+    border-right: 1px solid black;
     border-bottom: 1px solid black; 
+    border-left: 1px solid black;
 }
 
 #insertionHeader{
@@ -36,23 +40,29 @@
 }
 
 #insertionContent{
-    overflow: auto;
+    /* overflow: auto; */
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
 
 #insertionFormBlock{
     border-right: 1px solid black;  
-    display: inline-block;
+    width: 250px;
 }  
 
 #insertionSuggestion_fkBlock{
-    overflow: auto;
-    vertical-align: top;
-    display: inline-block;
+    flex: 1;
+    /* overflow: auto; */
 }
 
-/* #queryBlock{
-    overflow: auto;
-} */
+#queryBlock{
+    /* overflow: auto; */
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    margin-bottom: 2px;
+}
 
 #queryHeader{
     overflow: auto;
@@ -61,18 +71,19 @@
     background-color: #636d70;
     background-color: rgb(240, 234, 234);
     color: black;
+    overflow: auto;
 }
 
-/* #queryContent{
-
-} */
+#queryContent{
+    display: flex;
+    flex-direction: row;
+}
 
 #queryFormBlock{
-    display: inline-block;
     border-right: 1px solid black;
+    width: 250px;
 }
 
-#queryResultBlock{
-    display: inline-block;
-    vertical-align: top;
-}
+/* #queryResultBlock{
+    flex-grow: 1;
+} */
