--- a/views/admin/root.ejs
+++ b/views/admin/root.ejs
@@ -17,6 +17,7 @@
             /* background-color: rgb(248, 228, 201); */
             /* background-color: antiquewhite; */
             background-color: white;
+            /* background-color: rgb(202, 191, 162); */
             /* background-color: rgba(14, 11, 11, 0.795); */
             width: 100%;
             height: 100%;
@@ -73,7 +74,8 @@
             cursor: pointer;
         }
         #tables td:hover, #views td:hover{
-            background-color: #13137c;
+            /* background-color: #13137c; */
+            background-color: #7e7ea3;
             color:white;
         }
 
