updated navigation bar

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -38,7 +38,8 @@
         border:0;
         border-right-width: 3px;
         border-style: solid;
-        border-right-color: #FFEFD5;
+        /* border-right-color: #FFEFD5; */
+        border-right-color: rgb(73, 68, 59);
     }
 
     #sideNav .header{
