added radio buttons for series and match

--- a/views/user/t20.ejs
+++ b/views/user/t20.ejs
@@ -61,6 +61,13 @@
 <div class = "t20Content">
     <div class = "filter">
         <div>
+            <input type="radio" name = "fetch" value = "series">
+            getSeries
+            <input type="radio" name="fetch" value="matches">
+            getMatches
+            <br>
+        </div>
+        <div>
             Starting Year: 
             <select name="StartingYear" id="startingYear">
                 <option value="2018">2018</option>
