--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     
     <script src="main.js"></script> -->
+    <script src="rx.lite.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <style>
     html,
