--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -19,8 +19,8 @@
         color: #111;
         /*background-color: rgb(212, 202, 218);*/
         position: relative;
-        overflow-x: hidden;
         background-color: #fff;
+        overflow-x: hidden;
     }
 
     .container{
@@ -103,10 +103,11 @@
     }
 
     #content{
+        padding-top: 6px;
         margin-left: 260px;
         float:left;
         width:100%;
-
+        /* overflow-x: auto; */
     }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
