--- a/views/user/t20Series.ejs
+++ b/views/user/t20Series.ejs
@@ -37,7 +37,7 @@
                     <td><%=elem.series_id%></td>
                     <td><%=elem.series_name%></td>
                     <td><%=elem.series_type%></td>
-                    <td><%=elem.starting_date.toString()%></td>
+                    <td><%=elem.starting_date%></td>
                     <td><%=elem.end_date%></td>
                     <td><%=elem.authority%></td>
                 </tr>
