--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -106,7 +106,7 @@
         padding-top: 6px;
         margin-left: 260px;
         float:left;
-        width:100%;
+        width:calc(100% - 260px);
         /* overflow-x: auto; */
     }
     </style>
