--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -138,6 +138,8 @@
                             // console.log(data)
                             $('#content').html(data)
                         })
+                    }else{
+                        $('#content').html("To Be Loaded")
                     }
                 }
             });
@@ -190,7 +192,7 @@
                     <div class="t20Icon">
                         <img src="/icons/t20.png" alt="Cinque Terre" width="18px" height="18px">
                     </div>
-                    <a class="desc">T20</a>
+                    <a class="desc">Query</a>
                 </div>
                 <div class="navodi">
                     <div class="odiIcon"><></div>
@@ -211,7 +213,7 @@
              </div>
         </div>
         <div id = "content">
-            <p>Contents Here</p>
+            <p>To Be Loaded</p>
         </div>
     </div>
 </body>
